[tool.poetry]
name = "stalker"
version = "0.1.0"
description = ""
authors = ["Kerim <kerim.tricic@dualsharks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
setuptools = "^69.0.3"
polygon-api-client = "^1.13.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
